2.1.1 ~ fix searcheable y overflow

--- a/css/index.css
+++ b/css/index.css
@@ -389,7 +389,8 @@ body.tab4.deficit #appFooter #tab4	{ color: #C85834; }
 #FacebookLogin:after	{ font-family: KCals; content: '\f082'; right: 20px; }
 #emailLogin:after		{ font-family: Arial; content: '@'; right: 0; font-size: 33px; line-height: 41px; }
 /*tizen hide email login*/
-.tizen #emailLogin		{ display: none; }
+.tizen #emailLogin			{ display: none; }
+.tizen.appDebug #emailLogin	{ display: block !important; }
 /**/
 .playbook #FacebookLogin{ display: none; }
 .android2 #emailLogin	{ display: none; }
@@ -1356,7 +1357,7 @@ span.delete #delete:active	{ color: #ccc !important; -webkit-transition-timing-f
 .appLang-bg #foodSearch,
 .appLang-fr #foodSearch					{ font-size: 16px; }
 #foodListWrapper						{ width: 100%; overflow: hidden; z-index: 2; background-color: #fff; }
-.searcheable							{ position: relative; margin: 0; padding: 12px 9px 9px 53px; min-height: 60px; float: left; display: block; width: 100%; overflow-x: hidden; }
+.searcheable							{ position: relative; margin: 0; padding: 12px 9px 9px 53px; min-height: 60px; float: left; display: block; width: 100%; overflow: hidden; }
 .searcheable:nth-child(even)			{ background-color: #f8f8f8; }
 .searcheable.activeOverflow				{ background-color: #e4e4e4; }
 .searcheable.yellow						{ background-color: rgba(255,200,0,.8); }
